# agtx

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_index.rs  commands.rs  db.rs  lib.rs  main.rs  state.rs  transcript.rs
src-tauri/src/hooks/: installer.rs  mod.rs  receiver.rs  schema.rs
src/components/: ClaudeResumePicker.tsx  Dashboard.tsx  LabelManager.tsx  NewSessionDialog.tsx  SessionCard.tsx  SessionInfoBar.tsx  Settings.tsx  Sidebar.tsx  TaskBoard.tsx  TaskRow.tsx  Terminal.tsx  TerminalHost.tsx  TerminalTabs.tsx  WorkspaceDialog.tsx
src/hooks/: useLabels.ts  useSessions.ts  useTasks.ts  useWorkspaces.ts
src/lib/: pickers.ts  runtime.ts  status.ts  tauri.ts  workspaceColors.ts
src/styles/: globals.css
